Hero side by side

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <ul class="nav-links">
       <li><a href="#">Home</a></li>
       <li><a href="#">About Me</a></li>
-      <li><a href="#">Projects</a></li>
+      <li><a href="#projects">Projects</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
   <body>
     <!--Hero Section-->
-    <section>
+    <section class="hero-section">
       <div class="hero">
         <h1>Mary Fobbs-Guillory</h1>
         <p>
@@ -23,12 +23,14 @@
           and responsive websites. My main focus is bringing your vision to life
           with user-friendly designs.
         </p>
+      </div>
+      <div class="profile-pic">
         <img src="Profile pic.png" alt="Profile Picture" />
       </div>
     </section>
 
     <!-- Project Section -->
-    <section class="projects">
+    <section id="projects">
       <h2>My Projects</h2>
       <div class="project-grid">
         <div class="projects">
